<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_connect_name" />

    <TextView
        android:id="@+id/textViewPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittextIp"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/text_view_port_name"
        android:textColor="#000000"
        android:textSize="15sp" />

    <AutoCompleteTextView
        android:id="@+id/edittextPort"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewPort"
        android:paddingTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edit_text_port_name" />

    <AutoCompleteTextView
        android:id="@+id/edittextIp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewIP"
        android:layout_centerHorizontal="true"
        android:digits="0123456789."
        android:ems="10"
        android:inputType="none"
        android:paddingTop="20dp"
        android:text="@string/edit_text_ip_name" >

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/textViewIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/text_view_ip_name"
        android:textColor="#000000"
        android:textSize="15sp" />

</RelativeLayout>